# pick_app_ros2

install/: install.bash
pick_bringup/: CMakeLists.txt  package.xml
pick_bringup/launch/: load_robot_description.launch.py  moveit.launch.py  moveit_ur3.launch.py  moveit_ur5.launch.py  stereo.launch.py  ur3_bringup.launch.py  ur5e_bringup.launch.py  ur5e_bringup_sim.launch.py
pick_bringup/rviz/: rviz_config.rviz  rviz_config.rviz.old  stereo_config .rviz
pick_depthai/: CMakeLists.txt  package.xml
pick_depthai/launch/: my_yolov4_publisher_ex.launch.py  publish_bouding_boxes.launch.py  stereo_circle_detector.launch.py  yolo_spatial_detector_node.launch.py
pick_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pick_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  pick_robot copy.srdf  pick_robot.ros2_control.xacro  pick_robot.srdf  pick_robot.urdf.xacro  ur_servo.yaml
pick_moveit_config/config/ur_config/: joint_limits.yaml  ompl_planning.yaml  ur_servo.yaml
pick_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pick_n_drop/: CMakeLists.txt  CMakeLists.txt.old  package.xml  package.xml.old
pick_n_drop/include/pick_n_drop/: depthai_class.hpp  object_detection_class.hpp  ur_control_class.hpp
pick_n_drop/launch/: pick_n_place.launch (copy).py  pick_n_place.launch.old.py  pick_n_place.launch.py
pick_n_drop/scripts/: publisch_dummy_detections.py  tranmsform_pointcloud.py
pick_n_drop/src/: depthai_class.cpp  object_detection_class.cpp  pick_n_drop_app.cpp  ur_control_class.cpp
pick_robot_description/: CMakeLists.txt  package.xml
pick_robot_description/launch/: view_pick_robot.launch.py
pick_robot_description/rviz/: view_robot.rviz
pick_robot_description/urdf/: depthai_macro.urdf.xacro  initial_positions.yaml  pick_robot.urdf.xacro  tst.txt
pick_robot_description/urdf/beugel/meshes/: Beugel-OAK-D-Arrow.old2.STL  Beugel-OAK-D.STL
pick_robot_description/urdf/beugel/solidworks/: Beugel-OAK-D.SLDPRT
pick_robot_description/urdf/beugel/urdf/: Beugel.urdf.xacro  BeugelArrow.urdf.xacro  BeugelWithArrow.urdf.xacro
pick_robot_description/urdf/epick/urdf/: epick_body.xacro  epick_single_suction_cup.xacro
