<?xml version="1.0"?>
<package format="3">
  <name>pick_depthai</name>
  <version>2.8.1</version>
  <description>The pick_depthai package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ga.harkema@avans.nl">Gerard Harkema</maintainer>
  <author>Gerard Harkema</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
