<?xml version="1.0"?>
<package format="3">
  <name>pick_n_drop</name>
  <version>2.8.1</version>
  <description>The pick_n_drop package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ga.harkema@avans.nl">user</maintainer>
  <author>Gerard Harkema</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>vision_msgs</depend>
  #<depend>foxglove_msgs</depend>
  <depend>rviz_imu_plugin</depend>

  <depend>moveit_ros_planning_interface</depend>

  <depend>rclpy</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
